--- a/podcast/package.json
+++ b/podcast/package.json
@@ -13,6 +13,7 @@
     "@mendable/firecrawl-js": "^1.18.2",
     "@mistralai/mistralai": "^1.5.0",
     "@radix-ui/react-label": "^2.1.2",
+    "@radix-ui/react-radio-group": "^1.2.3",
     "@radix-ui/react-slot": "^1.1.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
